# Physx4Jni

./: .gitignore  README.md
PhysxAPI/: CMakeLists.txt
PhysxAPI/source/: Math.h  PhysxApi.cpp  PhysxApi.h  PhysxApiAllocator.cpp  PhysxApiAllocator.h  PhysxApiCommon.h  PhysxMath.h
PhysxAPI/source/object/: SceneCharacterObj.cpp  SceneCharacterObj.h  SceneKinematicObj.cpp  SceneKinematicObj.h  SceneObj.cpp  SceneObj.h  SceneRigidObj.cpp  SceneRigidObj.h  SceneStaticObj.cpp  SceneStaticObj.h  SceneTriggerObj.cpp  SceneTriggerObj.h
PhysxAPI/source/scene/: QueryResult.cpp  QueryResult.h  Scene.cpp  Scene.h
PhysxAPI/tests/: TestMain.cpp
openspec/: config.yaml
openspec/changes/archive/2026-04-27-support-multiple-actors-per-scene-obj/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-27-support-multiple-actors-per-scene-obj/specs/scene-obj-multiple-actors/: spec.md
openspec/specs/scene-obj-multiple-actors/: spec.md
physx/: .gitignore
physx/buildtools/presets/public/: linux-clang-cpu-only.xml  mac-aarch64-clang-cpu-only.xml  vc17win64-cpu-only.xml  vc17win64.xml
physx/include/foundation/: PxVecQuat.h  PxVecTransform.h
physx/pvdruntime/include/: OmniPvdLoader.h
physx/source/common/src/linux/: .gitkeep
physx/source/compiler/cmake/: PhysX.cmake
physx/source/compiler/cmake/linux/: CMakeLists.txt  PhysXFoundation.cmake
physx/source/compiler/cmake/modules/: NvidiaBuildOptions.cmake
physx/source/foundation/: FdTempAllocator.cpp
physx/source/geomutils/src/mesh/: GuBV4Build.cpp
physx/source/immediatemode/include/: .gitkeep
physx/source/lowlevel/software/include/linux/: .gitkeep
physx/source/physxextensions/src/tet/: ExtDelaunayBoundaryInserter.cpp
physx/source/physxvehicle/src/pvd/: VhPvdFunctions.cpp
